--- a/jpweb.html
+++ b/jpweb.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1> Hello world!</h1>
+    <a href="page.html">Click me</a>
   </body>
 </html>
 <p> Lets get jiggy my man mcgregor knocks out Mayweather in round 1</p>
